--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ Makefile
 travis_qmake_gcc_cpp98_gcov
 travis_qmake_gcc_cpp98
 travis_qmake_gcc_cpp98_boost
+*.tar.gz
+travis_qmake_gcc_cpp11_boost_oclint
+oclint-0.10.3/
